--- a/student_app/backend/.env
+++ b/student_app/backend/.env
@@ -1,6 +1,16 @@
-DB_HOST=database-1.cxugm6u0ctx0.ap-southeast-2.rds.amazonaws.com
-DB_USER=admin
+#DB_HOST=mysql-school
+#DB_USER=admin
+#DB_PASSWORD=admin
+#DB_NAME=schooldb
+#REDIS_URL=redis://redis:6379
+#OTEL_EXPORTER_OTLP_ENDPOINT=http://3.106.54.202:4318/v1/traces
+
+
+DB_HOST=mysql-school
+DB_USER=root
 DB_PASSWORD=admin123
 DB_NAME=schooldb
 REDIS_URL=redis://redis:6379
-OTEL_EXPORTER_OTLP_ENDPOINT=http://3.106.54.202:4318/v1/traces
+OTEL_EXPORTER_OTLP_ENDPOINT=http://172.105.42.33:4318/v1/traces
+MYSQL_ROOT_PASSWORD=admin123
+
