--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,27 @@
+name: Build and Deploy on Self-Hosted Runner
 
+on:
+  push:
+    branches:
+      - main
+
+env:
+  APP_DIR: /home/ubuntu/docker/student-app
+  COMPOSE_FILE: docker-compose.yml
+
+jobs:
+  build-and-deploy:
+    name: Build and Deploy with Docker Compose
+    runs-on: signoz
+
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Stop Existing Containers
+        working-directory: ${{ env.APP_DIR }}
+        run: docker-compose -f $COMPOSE_FILE down || true
+
+      - name: Build and Start Containers
+        working-directory: ${{ env.APP_DIR }}
+        run: docker-compose -f $COMPOSE_FILE up -d --build
