--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ env:
   APP_DIR: /home/ubuntu/docker/student_app
   COMPOSE_FILE: docker-compose.yml
   ASG_SCRIPT_PATH: /home/ubuntu/asg/update_asg.sh
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
   build-and-deploy:
